--- a/css/regUsuarios.css
+++ b/css/regUsuarios.css
@@ -7,3 +7,16 @@
 	margin: auto;
 	width: 40%;
 }
+
+#moverGruposDerecha {
+	position: relative;
+	margin-bottom: 10px;
+	top: 25px;
+	width: 100%;
+}
+
+#moverGruposIzquierda {
+	position: relative;
+	top: 25px;
+	width: 100%;
+}
