--- a/css/regUsuarios.css
+++ b/css/regUsuarios.css
@@ -8,14 +8,14 @@
 	width: 40%;
 }
 
-#moverGruposDerecha {
+#moverGruposDerechaMaestro, #moverGruposDerechaAlumno  {
 	position: relative;
 	margin-bottom: 10px;
 	top: 25px;
 	width: 100%;
 }
 
-#moverGruposIzquierda {
+#moverGruposIzquierdaMaestro, #moverGruposIzquierdaAlumno {
 	position: relative;
 	top: 25px;
 	width: 100%;
